syntax = "proto3";

option csharp_namespace = "DataBridge.Search";

package Search;

// HTTP 트랜스코딩 필수 임포트
import "google/api/annotations.proto";

service SearchService {
  // 1. 얕은 탐색 (주소: /search/name/검색어)
  rpc GetGameBySearchName (SearchNameRequest) returns (GameLabelResponse) {
    option (google.api.http) = {
      get: "/search/name/{search_name}"
    };
  }

  // 2. 깊은 탐색 (주소: /search/index/번호)
  rpc GetGameByIndex (GameIndexRequest) returns (GameLabelResponse) {
    option (google.api.http) = {
      get: "/search/index/{game_index}"
    };
  }
}

// --- 메시지 정의 ---

message SearchNameRequest {
  string search_name = 1;
}

message GameIndexRequest {
  int32 game_index = 1;
}

message GameLabelResponse {
  bool is_found = 1;
  string search_name = 2;
  string title = 3;
  int32 game_index = 4;
  int32 steam_app_id = 5;
}